# EDA_Natural_Language_Processing

./: .gitignore
tamil-eda-platform/: .gitignore  pyproject.toml  setup.cfg  setup.py
tamil-eda-platform/config/: config.yaml  logging.yaml  registry.yaml
tamil-eda-platform/config/environments/: dev.yaml  prod.yaml  staging.yaml
tamil-eda-platform/connectors/: api_connector.py  base_connector.py  cloud_connectors.py  db_connector.py  file_connector.py
tamil-eda-platform/core/: constants.py  dependency_container.py  enums.py  exceptions.py  settings.py
tamil-eda-platform/events/: event_factory.py  event_router.py  job_events.py
tamil-eda-platform/observability/: logger.py
tamil-eda-platform/queue/: job_queue.py  priority_queue.py  queue_manager.py  retry_queue.py
tamil-eda-platform/security/: secrets.py
tamil-eda-platform/tamil_eda_platform.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tamil-eda-platform/test_file/: test_baseconnector.py  test_constants.py  test_container.py  test_dbconnector.py  test_enums.py  test_exception.py  test_fileconnector.py  test_settings.py  test_utils.py
tamil-eda-platform/trigger/: base_trigger.py  file_trigger.py  scheduler_trigger.py  trigger_manager.py
tamil-eda-platform/utils/: checksum.py  id_generator.py  retry_utils.py
