[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tamil-eda-platform"
version = "2.0.0"
description = "End-to-End Tamil Language Data Engineering Platform — ingestion, translation, validation, and storage pipeline"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Tamil EDA Team" }
]
keywords = ["tamil", "nlp", "translation", "data-engineering", "eda", "pipeline"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ── CORE RUNTIME DEPENDENCIES ─────────────────────────────────────────────────
# Only the packages the platform MUST have to run in production.
# Optional groups below handle dev, cloud, and NLP extras.
dependencies = [
  # Core & Config
  "pydantic>=2.7.1",
  "pydantic-settings>=2.3.0",
  "pyyaml>=6.0.1",

  # HTTP & Async
  "httpx>=0.27.0",

  # Storage
  "pyarrow>=16.1.0",
  "sqlalchemy>=2.0.30",

  # Queue
  "redis>=5.0.4",

  # Observability
  "structlog>=24.1.0",
  "prometheus-client>=0.20.0",

  # Security
  "cryptography>=42.0.7",

  # API
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "ratelimit>=2.2.1",

  # File triggers
  "watchdog>=4.0.0",
  "apscheduler>=3.10.4",

  # Language detection
  "langdetect>=1.0.9",
  "chardet>=5.2.0",

  # Translation quality
  "sacrebleu>=2.4.2",
]

# ── OPTIONAL DEPENDENCY GROUPS ────────────────────────────────────────────────
[project.optional-dependencies]

# pip install -e ".[dev]"
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "pytest-cov>=5.0.0",
  "freezegun>=1.5.1",
  "faker>=25.2.0",
  "black>=24.4.2",
  "ruff>=0.4.4",
  "mypy>=1.10.0",
  "pre-commit>=3.7.1",
  "ipython>=8.24.0",
]

# pip install -e ".[cloud]"
cloud = [
  "boto3>=1.34.100",
  "google-cloud-storage>=2.16.0",
  "google-cloud-translate>=3.15.3",
  "azure-storage-blob>=12.19.1",
]

# pip install -e ".[nlp]"
nlp = [
  "sentence-transformers>=3.0.1",
  "torch>=2.3.0",
  "datasets>=2.19.1",
  "indic-nlp-library>=0.92",
]

# pip install -e ".[ingestion]"
ingestion = [
  "pymupdf>=1.24.3",
  "pillow>=10.3.0",
  "pytesseract>=0.3.10",
]

# pip install -e ".[security]"
security = [
  "hvac>=2.1.0",
  "presidio-analyzer>=2.2.354",
  "presidio-anonymizer>=2.2.354",
  "deepl>=1.18.0",
  "aioredis>=2.0.1",
]

# pip install -e ".[translation]"
translation = [
  "deepl>=1.18.0",
  "google-cloud-translate>=3.15.3",
]

# pip install -e ".[all]"  ← installs everything
all = [
  "tamil-eda-platform[dev,cloud,nlp,ingestion,security,translation]",
]

# ── CLI ENTRY POINTS ──────────────────────────────────────────────────────────
[project.scripts]
tamil-eda = "main:main"                    # python -m main  →  tamil-eda --env prod
tamil-eda-api = "api.routes:start"         # run API server standalone

# ── TOOL CONFIG ───────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=. --cov-report=term-missing --cov-report=html"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
exclude = '''
/(
  \.git | \.venv | __pycache__ | build | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "build/", "dist/"]
