# setup.cfg — Tamil EDA Platform
# Hard version pins for reproducible installs.
# These are the exact versions tested together.
# pyproject.toml holds the ">=" ranges for flexibility.
# This file pins them to exact versions for CI and production.

[options]
zip_safe = False
include_package_data = True

[options.package_data]
* =
    *.yaml
    *.yml
    *.json
    py.typed

# ── FLAKE8 (if your editor uses flake8 instead of ruff) ───────────────────────
[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude =
    .git,
    .venv,
    __pycache__,
    build,
    dist,
    *.egg-info

# ── COVERAGE ──────────────────────────────────────────────────────────────────
[coverage:run]
source = .
omit =
    .venv/*
    tests/*
    setup.py
    */migrations/*

[coverage:report]
fail_under = 80
show_missing = True
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if TYPE_CHECKING:

[coverage:html]
directory = htmlcov
